--- a/src/client/assets/scss/custom/utilities/_sizing.scss
+++ b/src/client/assets/scss/custom/utilities/_sizing.scss
@@ -3,3 +3,13 @@
 .h-100vh {
 	height: 100vh !important;
 }
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @each $size, $length in $sizes {
+    @include media-breakpoint-up($breakpoint) {
+      .w-#{$breakpoint}-#{$size} {width: $length !important;}
+
+      .w-#{$breakpoint}-auto {width: auto !important;}
+    }
+  }
+}
